<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--Engelsk-->
    <string name="language">Chose a language</string>
    <string name="app_name">TicTacToe</string>
    <string name="norwegian">Norwegian</string>
    <string name="english">English</string>
    <string name="numRounds">Number of rounds</string>
    <string name="startGame">Start Game</string>
    <string name="action_settings">Settings</string>
    <string name="first_player">goes first.</string>
    <string name="turn_player_one">\'s turn</string>
    <string name="turn_player_two">\'s turn</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_player_one_wins"> won!</string>
    <string name="result_player_two_wins"> won!</string>
    <string name="one">1</string>  <!--  Bare for å ha tall på knapper når du lager...-->
    <string name="two">2</string> <!-- ...GUIen -->
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Info</string>
    <string name="player_one">Player One:  </string>
    <string name="ties">Ties:  </string>
    <string name="player_two">Player Two:  </string>
    <string name="about_heading">About</string>
    <string name="about_info">This application is made ​​by Håvard Moås.
        Tic Tac Toe\s rules is to get three in a row, either put three
        chips in horizontal direction, three chips in the vertical direction
        or three chips at an angle of the board.
    You start the game by choosing Player name\'s and number of rounds to
    play before the game crown a winner.
    </string>
    <string name="inputError">You have to input playernames and number of rounds</string>
    <string name="turn">Turns: </string>
</resources>
