<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/language"
        android:id="@+id/language"
        android:layout_gravity="left|center_vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="170dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/norwegian"
            android:id="@+id/btnNor" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:id="@+id/btnEnglish" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/playerOne"
            android:hint="@string/player_one"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/playerTwo"
            android:hint="@string/player_two"
            />
    </LinearLayout>
<AbsoluteLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numRounds"
        android:hint="@string/numRounds"
        android:layout_x="79dp"
        android:layout_y="44dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:id="@+id/btnStartGame"
        android:layout_x="131dp"
        android:layout_y="91dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="139dp"
        android:text="@string/about_info"
        android:id="@+id/textView"
        android:layout_x="3dp"
        android:layout_y="150dp" />
</AbsoluteLayout>
</LinearLayout>
